changed the vh to min-height to avoid overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 /*banner section*/
 
 .main-banner-section {
-  height: 95vh;
+  min-height: 100vh;
   width: 100%;
   position: relative;
   background-image: url("./img/bg-1.png");
@@ -104,7 +104,7 @@ opacity: 0;
 }
 
 .main-banner-section .text p {
-  color: #ecedf1;
+  color: darkslategray;
   text-align: justify;
   font-size: 18px;
 }
@@ -114,7 +114,7 @@ p, .text {
 }
 
 .sec-title.light .title, .sec-title.light h2 {
-
+  color: darkslategray;
   animation: moveInRight 1.3s ease-out;
 }
 
